# IngameIME_Linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run-format.py
.github/workflows/: CI.yaml
include/fcitx/: fcInputContextImpl.hpp
src/: IngameIMEImpl.cpp  fcInputContextImpl.cpp
src/include/: CompositionImpl.hpp  FormatUtil.hpp  InputContextImpl.hpp  StringUtil.hpp
src/include/d/: FcitxService.hpp  dIngameIMEImpl.hpp  dInputContextImpl.hpp  dInputProcessorImpl.hpp
src/include/dbus/fcitx/: FcitxComposition.hpp  FcitxCompositionImpl.hpp  FcitxIngameIME.hpp  FcitxIngameIMEImpl.hpp  FcitxInputContext.hpp  FcitxInputContextImpl.hpp  FcitxInputProcessor.hpp  FcitxInputProcessorImpl.hpp  FcitxService.hpp
src/include/dbusfrontend/: dCompositionImpl.hpp  dIngameIMEImpl.hpp
src/include/wl/: WlCompositionImpl.hpp  WlIngameIMEImpl.hpp  WlInputContextImpl.hpp  WlInputProcessorImpl.hpp
src/include/x11/: XCompositionImpl.hpp  XIngameIMEImpl.hpp  XInputContextImpl.hpp  XInputProcessorImpl.hpp
testWnd/: CMakeLists.txt
testWnd/src/: InputWindow.hpp  main.cpp
